Fix 100vh issue on mobile

--- a/src/components/styles/hero.module.css
+++ b/src/components/styles/hero.module.css
@@ -1,12 +1,9 @@
 .container {
   font-family: "IBM Plex Sans", sans-serif;
-  min-height: 100vh;
-  height: -moz-available; /* WebKit-based browsers will ignore this. */
-  height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-  height: fill-available;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: inherit;
 }
 
 .title {
